syntax = "proto3";

package jobs.v1;

import "tagger/tagger.proto";
import "validate/validate.proto";

message CreateOrgRequest {
  string org_id = 1 [
    (validate.rules).string.uuid = true,
    (tagger.tags) = "faker:\"uuid\""
  ];
}

message CreateOrgResponse {}
